@@ -24,3 +24,9 @@ FINISHED_TASK_STATES = [
 ]
 
 TASK_STATE_PLANNED = 'task-state-planned'
+
+FINAL_TASK_STATES = [
+    'task-state-tested-and-closed',
+    'task-state-cancelled',
+    'task-state-skipped'
+]
