@@ -22,6 +22,7 @@ from opengever.ogds.base.utils import get_current_admin_unit
 from opengever.ogds.base.utils import get_current_org_unit
 from opengever.ogds.base.utils import ogds_service
 from opengever.task import _
+from opengever.task import FINAL_TASK_STATES
 from opengever.task import TASK_STATE_PLANNED
 from opengever.task import util
 from opengever.task.activities import TaskAddedActivity
@@ -344,6 +345,11 @@ class Task(Container):
         """If the task has been generated by triggering a tasktemplatefolder.
         """
         return IFromSequentialTasktemplate.providedBy(self)
+
+    @property
+    def is_in_final_state(self):
+        current_state = api.content.get_state(self)
+        return current_state in FINAL_TASK_STATES
 
     def is_open(self):
         return api.content.get_state(self) in TaskModel.OPEN_STATES
