@@ -9,6 +9,7 @@ Changelog
 - Bump ftw.upgrade for deferrable upgrade support. [deiferni]
 - Create initial version with the original document creator as the principal. [lgraf]
 - Improve usability of proposal add form. [elioschmutz]
+- Revoke local roles for responsible and agency when finishing a task. [phgross]
 - Add REST API endpoint for creating bumblebee sessions. [buchi]
 - Bump ftw.casauth to 1.2.0 which provides a `@caslogin` endpoint. [buchi]
 - Customize `@navigation` endpoint to return repository tree. [buchi]
